k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
  - host: healthapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healthapi-service
            port:
              number: 8080
